--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-svg": "^12.3.0",
     "react-native-web": "^0.16.5",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^1.1.2"
   },
