--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "native-base": "^3.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.2.0",
+    "react-font": "^1.2.1",
+    "react-loader-spinner": "^5.1.5",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-svg": "^12.3.0",
     "react-native-web": "^0.16.5",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^1.1.2",
@@ -42,6 +47,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "autoprefixer": "10.4.5"
   }
 }
